# IncroOS

./: .gitignore  .gitmodules  CMakeLists.txt  MEMORY_MANAGER_SUMMARY.md  README.md  builder.yaml  serial_output.txt
.artifacts/bochs-output/: bochsrc.ci
.github/workflows/: bochs-test.yml  build-test-reusable.yml  nightly-build.yml
_codeql_build_dir/: BOOT.SYS  CMakeCache.txt  KRNLDR.ELF  Makefile  STAGE2.SYS  cmake_install.cmake
_codeql_build_dir/boot/: Makefile  cmake_install.cmake
_codeql_build_dir/boot/fat32/: Makefile  cmake_install.cmake
_codeql_build_dir/kernel/: Makefile  cmake_install.cmake
_codeql_build_dir/kernel/drivers/: Makefile  cmake_install.cmake
_codeql_build_dir/kernel/memory/: Makefile  cmake_install.cmake
_codeql_build_dir/kernel/output/: Makefile  cmake_install.cmake
bochs/: bochsrc  bochsrc.test
boot/: CMakeLists.txt  mbr.asm
boot/fat32/: Boot1.asm  CMakeLists.txt  Kernel_Entry_X86.asm  Stage2_X86.asm
boot/includes/: DataSection.inc  Macros.inc  stdio64.inc
kernel/: CMakeLists.txt  kernel.c  logger.c  logger.h
kernel/cpu/: idt.h  io.h
kernel/drivers/: CMakeLists.txt  keyboard.asm  keyboard.c  keyboard.h  serial.asm  serial.c  serial.h
kernel/interrupts/: CMakeLists.txt  interrupts.c  interrupts.h  isr.asm  pic.c  pit.c
kernel/lib/: CMakeLists.txt  print.c  print.h  string.c  string.h
kernel/logger/: klogger.c  klogger.h
kernel/memory/: CMakeLists.txt  kmalloc.c  kmalloc.h  pmm.c  pmm.h  vmm.c  vmm.h
kernel/mm/: CMakeLists.txt  README.md  heap.c  heap.h  kmalloc.c  kmalloc.h  pmm.c  pmm.h  vmm.c  vmm.h
kernel/output/: CMakeLists.txt  terminal.c  terminal.h
scripts/: run-ci-local.sh
tests/: Makefile  README.md  mock_serial.c  mock_serial.h  test_framework.c  test_framework.h  test_kmalloc.c  test_pmm.c
